<resources>
    <string name="app_name">Togitech Barcode Reader and Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="barcode_format_aztec">AZTEC</string>
    <string name="barcode_format_codabar">CODABAR</string>
    <string name="barcode_format_code_39">CODE 39</string>
    <string name="barcode_format_code_93">CODE 39</string>
    <string name="barcode_format_code_128">CODE 128</string>
    <string name="barcode_format_data_matrix">DATA MATRİX</string>
    <string name="barcode_format_ean_8">"EAN 8"</string>
    <string name="barcode_format_ean_13">EAN 13</string>
    <string name="barcode_format_itf_14">ITF</string>
    <string name="barcode_format_pdf_417">PDF 417</string>
    <string name="barcode_format_qr_code">QR CODE</string>
    <string name="barcode_format_upc_a">UPC A</string>
    <string name="barcode_format_upc_e">UPC E</string>
    <string name="barcode_format_maxi_code">MAXI CODE</string>
    <string name="google">Google</string>
    <string name="bing">Bing</string>
    <string name="yandex">Yandex</string>
    <string name="yahoo">Yahoo</string>
    <string name="duck">Duck</string>
    <string name="search_google">https://www.google.com/search?q=</string>
    <string name="search_bing">https://www.bing.com/search?q=</string>
    <string name="search_yandex">https://www.yandex.ru/search/?text=</string>
    <string name="search_yahoo">https://search.yahoo.com/search?p=</string>
    <string name="search_duck">https://duckduckgo.com/?q=</string>
    <string name="open_link">Open Link</string>
    <string name="share_text">Share as text</string>
    <string name="copy_clipboard">Copy to clipboard</string>
    <string name="share_image">Share as image</string>
    <string name="save_image">Save as image</string>
    <string name="print">Print</string>
    <string name="search_web">Search on the web</string>
    <string name="flash">Flash</string>
    <string name="delete">Delete</string>
    <string name="create_barcode">Create Barcode</string>
    <string name="add_fav">Add Fav</string>
    <string name="copy">Successfully Copy</string>
    <string name="date">Date</string>
    <string name="barcode">Barcode</string>
    <string name="permission_description">Need a grand permisssion</string>
    <string name="success">Success</string>
    <string name="search_amazon">Search on Amazon</string>
    <string name="search_ebay">Search on eBay</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="crate_barcode">Crate Barcode</string>
    <string name="qr_code">QR CODE</string>
    <string name="text">Text</string>
    <string name="link">Link</string>
    <string name="wifi">Wifi</string>
    <string name="otp">OTP</string>
    <string name="event">Event</string>
    <string name="sms">SMS</string>
    <string name="mms">MMS</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="create_qrcode">Create BARCODE</string>
    <string name="create">CREATE</string>
    <string name="save_gallery">Save Gallery</string>
    <string name="saved_success">Image Saved Gallery</string>
    <string name="error">Error</string>
    <string name="https">https://</string>
    <string name="enter_url">Enter Url.</string>
    <string name="select_encryption_type">Select Encryption Type:</string>
    <string name="network_name">Network Name</string>
    <string name="network_password">Network Password</string>
    <string name="connect_wifi">Connect to Wifi</string>
    <string name="open_setting">Open Wİ-Fİ Settings</string>
    <string name="copy_network_name">Copy Network Name</string>
    <string name="copy_network_password">Copy Network Password</string>
    <string name="qr_error">Type not detected</string>
    <string name="connection_try">Please wait! Connecting to wifi network...</string>
    <string name="wifi_is_connected">Already connected to wifi network!</string>
    <string name="please_open_wifi">Please open your WI-FI</string>
    <string name="open_google_map">Open on Google map\'s</string>
    <string name="open_yandex_map">Open on Yandex map\'s</string>
    <string name="open_bing_map">Open on Bing map\'s</string>
    <string name="copy_location_text">Copy Text</string>
    <string name="wait_wifi">"Please wait! Connecting to wifi "</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="company">Company</string>
    <string name="job">Job</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="web_site">Web Site</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="enter_phone_number">Enter Phone Number.</string>
    <string name="select_date">Select Date</string>
    <string name="title">Title</string>
    <string name="organizer">Organizer</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="summary">Summary</string>
    <string name="enter_your_message">Enter Your Message.</string>
    <string name="_1d_barcode">1D Barcode</string>
    <string name="contact">Contact</string>
    <string name="wpa_wpa2">WPA/WPA2</string>
    <string name="wep">WEP</string>
    <string name="enter_text">Enter Text.</string>
    <string name="turkiye">Türkiye</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="call_phone">Call phone number</string>
    <string name="add_contact">Add contact</string>
    <string name="send_sms">Send SMS</string>
    <string name="add_event">Add Calendar Event</string>
</resources>