<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.qrcode.TextCodeCreate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="?attr/colorPrimaryVariant">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:padding="16dp"
           android:background="@drawable/background_shape">
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/barcode_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/enter_text"/>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/create_text_code"
               android:layout_width="match_parent"
               android:layout_height="55dp"
               android:layout_marginTop="8dp"
               app:layout_constraintTop_toBottomOf="@+id/barcode_text"
               android:text="@string/create"/>

           <ImageView
               android:id="@+id/created_image"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintTop_toBottomOf="@id/create_text_code"
               tools:src="@drawable/ic_barcode"
               android:contentDescription="@string/app_name" />

           <com.google.android.material.button.MaterialButton
               android:id="@+id/save_image_gallery"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10sp"
               android:text="@string/save_gallery"
               android:textColor="@color/white"
               android:backgroundTint="@color/green"
               app:icon="@drawable/save"
               app:iconGravity="textStart"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/created_image"
              />

       </androidx.constraintlayout.widget.ConstraintLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>